--- a/app/src/main/res/layout/fragment_hajj.xml
+++ b/app/src/main/res/layout/fragment_hajj.xml
@@ -21,7 +21,7 @@
     <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Search"
+            android:text="Search packages"
             android:textSize="15dp"
             android:id="@+id/umrahSearch"
             android:layout_marginTop="10dp"
