--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     tools:context="com.example.zubairbhatti.mynavigationdrawer.MainActivity"
     android:id="@+id/drawer_layout"
+
     >
 
 
@@ -17,13 +18,14 @@
         android:id="@+id/main_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fitsSystemWindows="true">
+        android:fitsSystemWindows="true"
+        >
 
 
         <android.support.design.widget.AppBarLayout
             android:id="@+id/MyAppbar"
             android:layout_width="match_parent"
-            android:layout_height="256dp"
+            android:layout_height="350dp"
             android:fitsSystemWindows="true"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
@@ -42,17 +44,8 @@
                     android:scaleType="centerCrop"
                     android:fitsSystemWindows="true"
                     app:layout_collapseMode="pin"
-                    android:background="@drawable/me"/>
+                    android:background="@drawable/main_header"/>
 
-                <android.support.design.widget.TabLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    android:layout_gravity="bottom"
-                    android:id="@+id/tabLayout"
-                    app:tabMode="fixed"
-                    app:tabGravity="fill"
-                    android:background="@color/colorAccent">
-                </android.support.design.widget.TabLayout>
 
                 <android.support.v7.widget.Toolbar
                     android:id="@+id/MyToolbar"
@@ -61,20 +54,49 @@
                     app:layout_collapseMode="parallax"
                     app:layout_scrollFlags="scroll|enterAlways"
                     app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                    app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                    />
+
+
+                <android.support.design.widget.TabLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    android:layout_gravity="bottom"
+                    android:id="@+id/tabLayout"
+                    app:tabMode="fixed"
+                    app:tabGravity="fill"
+                    android:alpha="1.0"
+                    android:background="@color/colorAccent">
+                </android.support.design.widget.TabLayout>
+
 
             </android.support.design.widget.CollapsingToolbarLayout>
-
         </android.support.design.widget.AppBarLayout>
 
-    <android.support.v4.view.ViewPager
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/viewPager"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" >
-    </android.support.v4.view.ViewPager>
+        <android.support.v4.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/nest_scrollview"
+            android:fillViewport="true"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="760dp"
+                android:orientation="vertical">
 
+                <android.support.v4.view.ViewPager
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:id="@+id/viewPager"
+                    app:layout_behavior="@string/appbar_scrolling_view_behavior" >
+                </android.support.v4.view.ViewPager>
+
+            </LinearLayout>
+
+                    </android.support.v4.widget.NestedScrollView>
 
     </android.support.design.widget.CoordinatorLayout>
    <android.support.design.widget.NavigationView
