--- a/app/src/main/res/layout/activity_umrah_packages.xml
+++ b/app/src/main/res/layout/activity_umrah_packages.xml
@@ -26,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Login / Sign Up"
+        android:text="You have successfully LogIn"
         android:layout_marginTop="100dp"
         android:textSize="30dp"
         android:id="@+id/textView2" />
