--- a/app/src/main/res/layout/fragment_hajj.xml
+++ b/app/src/main/res/layout/fragment_hajj.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.example.zubairbhatti.bookmyumrah.HajjFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -10,184 +11,104 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         >
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-    <Button
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Search packages"
-            android:textSize="15dp"
-            android:id="@+id/umrahSearch"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:onClick="goToSearch"
-            android:background="#ffffff" />
-
-        <HorizontalScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="100dp">
+            android:layout_height="wrap_content">
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
+                android:orientation="vertical"
+                android:background="#FFFFFF">
 
                 <Button
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:text="Best Price"
-                    android:textSize="30dp"
-                    android:layout_marginTop="20dp"
+                    android:layout_height="wrap_content"
+                    android:text= "@string/search"
+                    android:textSize="15dp"
+                    android:drawableRight="@drawable/search"
+                    android:id="@+id/hajjSearch"
+                    android:layout_marginTop="10dp"
                     android:layout_marginLeft="30dp"
                     android:layout_marginRight="30dp"
-                    android:textColor="#f5b220"
-                    android:background="#ffffff" />
-                <Button
+                    android:onClick="goToSearch"
+                    android:background="#FFFFFF"
+                    />
+                <TextView
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:text="Discount"
-                    android:textSize="30dp"
-                    android:textColor="#f5b220"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="30dp"
+                    android:text="Trendy Now"
+                    android:textSize="20dp"
+                    android:textStyle="bold"
+                    android:textColor="#000000"
+                    android:gravity="center_horizontal"
+                    android:layout_marginBottom="10dp"
+                    />
+
+                <HorizontalScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    >
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <!--card View-->
+
+                    </LinearLayout>
+                </HorizontalScrollView>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
-                    android:layout_marginLeft="30dp"
-                    android:layout_marginRight="30dp"/>
-                <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:text="BMU Selected"
-                    android:textColor="#f5b220"
-                    android:textSize="30dp"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginLeft="30dp"
-                    android:layout_marginRight="30dp"/>
-                <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp"
                     android:text="Premium Packages"
-                    android:textSize="30dp"
-                    android:textColor="#f5b220"
+                    android:textSize="20dp"
+                    android:textStyle="bold"
+                    android:textColor="#000000"
+                    android:layout_marginBottom="10dp"
+                    android:gravity="center_horizontal"/>
+
+                <HorizontalScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    >
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <!--card View-->
+
+                    </LinearLayout>
+                </HorizontalScrollView>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
-                    android:layout_marginLeft="30dp"
-                    android:layout_marginRight="30dp"/>
+                    android:text="Best Price Packages"
+                    android:textSize="20dp"
+                    android:textColor="#000000"
+                    android:layout_marginBottom="10dp"
+                    android:textStyle="bold"
+                    android:gravity="center_horizontal"/>
 
 
+                <HorizontalScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    >
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
 
+                        <!--card View-->
+
+                    </LinearLayout>
+                </HorizontalScrollView>
             </LinearLayout>
-        </HorizontalScrollView>
-        <HorizontalScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="100dp">
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-
-                <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:text="Best Price"
-                    android:textSize="30dp"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginLeft="30dp"
-                    android:layout_marginRight="30dp"
-                    android:textColor="#f5b220"
-                    android:background="#ffffff" />
-                <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:text="Discount"
-                    android:textSize="30dp"
-                    android:textColor="#f5b220"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginLeft="30dp"
-                    android:layout_marginRight="30dp"/>
-                <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:text="BMU Selected"
-                    android:textColor="#f5b220"
-                    android:textSize="30dp"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginLeft="30dp"
-                    android:layout_marginRight="30dp"/>
-                <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:text="Premium Packages"
-                    android:textSize="30dp"
-                    android:textColor="#f5b220"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginLeft="30dp"
-                    android:layout_marginRight="30dp"/>
-
-
-
-            </LinearLayout>
-        </HorizontalScrollView>
-        <HorizontalScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="100dp">
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-
-                <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:text="Best Price"
-                    android:textSize="30dp"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginLeft="30dp"
-                    android:layout_marginRight="30dp"
-                    android:textColor="#f5b220"
-                    android:background="#ffffff" />
-                <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:text="Discount"
-                    android:textSize="30dp"
-                    android:textColor="#f5b220"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginLeft="30dp"
-                    android:layout_marginRight="30dp"/>
-                <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:text="BMU Selected"
-                    android:textColor="#f5b220"
-                    android:textSize="30dp"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginLeft="30dp"
-                    android:layout_marginRight="30dp"/>
-                <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:text="Premium Packages"
-                    android:textSize="30dp"
-                    android:textColor="#f5b220"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginLeft="30dp"
-                    android:layout_marginRight="30dp"/>
-
-
-
-            </LinearLayout>
-        </HorizontalScrollView>
-    </LinearLayout>
-    </ScrollView>
+        </ScrollView>
     </LinearLayout>
 
 
