--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#212121</color>
     <color name="text_color">#424242</color>
+    <color name="black">#000000</color>
+    <color name="transperent">#00000000</color>
 </resources>
